--- a/awesum-web/src/index.html
+++ b/awesum-web/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <base href="/" />
   <awesum-root></awesum-root>
 </body>
 </html>
