first real page.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-TODO
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>awesum.one</title>
+  <base href="/">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <base href="/" />
+  <awesum-root></awesum-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
